@@ -15,7 +15,7 @@ namespace object
   // FIXME: Do we really want to declare them?  They are only
   // for sake of the test suite.
 # define DECLARE(Name, Op)				\
-  rObject float_class_ ## Name (objects_type args);
+  rObject float_class_ ## Name (rContext c, objects_type args);
 
   DECLARE(add, +)
   DECLARE(div, /)
