@@ -26,20 +26,20 @@ namespace object
   typedef libport::shared_ptr<Object> rObject;
   typedef std::vector<rObject> objects_type;
 
-  // primitive_type.
-  typedef rObject (*primitive_type) (objects_type);
-
   /// \a Macro should be a binary macro whose first arg, \p What, is the
   /// lower case C++ name, and the second argument, \p Name, the
   /// capitalized URBI name.
-# define APPLY_ON_ALL_PRIMITIVES_BUT_OBJECT(Macro)	\
-  Macro(code,      Code)				\
-  Macro(context,   Context)				\
-  Macro(float,     Float)				\
-  Macro(integer,   Integer)				\
-  Macro(list,      List)                                \
-  Macro(primitive, Primitive)				\
+# define APPLY_ON_ALL_PRIMITIVES_BUT_OBJECT_AND_PRIMITIVE(Macro)	\
+  Macro(code,      Code)						\
+  Macro(context,   Context)						\
+  Macro(float,     Float)						\
+  Macro(integer,   Integer)						\
+  Macro(list,      List)						\
   Macro(string,    String)
+
+# define APPLY_ON_ALL_PRIMITIVES_BUT_OBJECT(Macro)			\
+  Macro(primitive, Primitive)						\
+  APPLY_ON_ALL_PRIMITIVES_BUT_OBJECT_AND_PRIMITIVE(Macro)
 
 # define APPLY_ON_ALL_PRIMITIVES(Macro)			\
   Macro(object,    Object)				\
@@ -61,7 +61,14 @@ namespace object
    * errors about non existent members, it's most likely because you did
    * obj.get_value () instead of obj->get_value ().  This is a side effect
    * of the operator-> used for the ref-counting.  Keep that in mind. */
-  APPLY_ON_ALL_PRIMITIVES_BUT_OBJECT(DEFINE)
+  APPLY_ON_ALL_PRIMITIVES_BUT_OBJECT_AND_PRIMITIVE(DEFINE)
+
+  // primitive_type.
+  // It is because we need this typedef that we have the
+  // previous hideous macro.
+  typedef rObject (*primitive_type) (rContext, objects_type);
+
+  DEFINE(primitive, Primitive)
 # undef DEFINE
 
   class UrbiException;
