@@ -31,7 +31,7 @@ namespace object
  */
 #define FETCH_ARG(N, Type)                              \
   assert(args[N]->kind_get() ==                         \
-         object::Object::kind_type(Type::traits::kind));\
+	 object::Object::kind_type(Type::traits::kind));\
   r ## Type arg ## N = args[N].unsafe_cast<Type>();
 
 /**
@@ -41,13 +41,13 @@ namespace object
  */
 #define PRIMITIVE_1_(Class, Name, Call, Ret, Type1, Get)        \
   rObject                                                       \
-  Class ## _class_ ## Name (objects_type args)                  \
+  Class ## _class_ ## Name (rContext, objects_type args)	\
   {                                                             \
     FETCH_ARG(0, Type1);                                        \
-    return Ret(Call(arg0 Get));                             \
+    return Ret(Call(arg0 Get));					\
   }
 
-#define PRIMITIVE_1(Class, Name, Call, Type1)              \
+#define PRIMITIVE_1(Class, Name, Call, Type1)	\
   PRIMITIVE_1_(Class, Name, Call, , Type1, )
 
 #define PRIMITIVE_1_V(Class, Name, Call, Ret, Type1)              \
@@ -61,7 +61,7 @@ namespace object
  */
 #define PRIMITIVE_2_(Class, Name, Call, Ret, Type1, Type2, Get) \
   rObject                                                       \
-  Class ## _class_ ## Name (objects_type args)                  \
+  Class ## _class_ ## Name (rContext, objects_type args)	\
   {                                                             \
     FETCH_ARG(0, Type1);                                        \
     FETCH_ARG(1, Type2);                                        \
@@ -81,11 +81,11 @@ namespace object
  */
 #define PRIMITIVE_OP_(Class, Name, Op, Ret, Type1, Type2, Get)  \
   rObject                                                       \
-  Class ## _class_ ## Name (objects_type args)                  \
+  Class ## _class_ ## Name (rContext, objects_type args)	\
   {                                                             \
     FETCH_ARG(0, Type1);                                        \
     FETCH_ARG(1, Type2);                                        \
-    return Ret(arg0 Get Op arg1 Get);                       \
+    return Ret(arg0 Get Op arg1 Get);				\
   }
 
 #define PRIMITIVE_OP(Class, Name, Op, Type1, Type2)             \
